test/golden/error.invalid-key.golden
Runtime error: invalid key: number
  ./test/golden/error.invalid-key.jsonnet:4:4-9 